SearchBar: Prevent page zoom on mobile
Unwanted behaviour of the page zooming when the input text box was selected (i.e. active) in mobile view. This behaviour was removed by keeping the font size at 16px.

--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -98,6 +98,8 @@
   }
 
   .SearchBar-fields input {
+    /* Font size kept at 16px to avoid zooming on input field selection. */
+    font-size: 16px;
     margin-right: 0;
     margin-bottom: .86rem;
   }
